--- a/src/main/resources/com/pooespol/proyecto2_heladeria/DetalleUbicacion.fxml
+++ b/src/main/resources/com/pooespol/proyecto2_heladeria/DetalleUbicacion.fxml
@@ -2,11 +2,18 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto2_heladeria.DetalleUbicacionController">
+<Pane fx:id="rootPopUp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto2_heladeria.DetalleUbicacionController">
    <children>
+      <ImageView fitHeight="250.0" fitWidth="300.0">
+         <image>
+            <Image url="@heladoRosa.jpg" />
+         </image>
+      </ImageView>
       <Label layoutX="14.0" layoutY="26.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Capogiro Gelato">
          <font>
             <Font size="24.0" />
@@ -22,7 +29,7 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="lbl2" layoutX="32.0" layoutY="208.0" text="Label">
+      <Label fx:id="lblTiempo" layoutX="32.0" layoutY="208.0" text="Label">
          <font>
             <Font size="14.0" />
          </font>
