--- a/src/main/resources/com/pooespol/proyecto2_heladeria/Ubicaciones.fxml
+++ b/src/main/resources/com/pooespol/proyecto2_heladeria/Ubicaciones.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="495.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto2_heladeria.UbicacionesController">
+<Pane fx:id="rootUbicaciones" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="495.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto2_heladeria.UbicacionesController">
    <children>
       <ImageView fitHeight="495.0" fitWidth="750.0" pickOnBounds="true" preserveRatio="true">
          <image>
