--- a/src/main/resources/com/pooespol/proyecto2_heladeria/ArmaTuHelado1.fxml
+++ b/src/main/resources/com/pooespol/proyecto2_heladeria/ArmaTuHelado1.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -92,16 +91,12 @@
                   <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0">
                      <children>
                         <Button fx:id="btnYogurt" mnemonicParsing="false" onAction="#yogurt" prefHeight="158.0" prefWidth="173.0" text="yogurt" textFill="WHITE">
-                           <graphic>
-                              <ImageView fitHeight="100.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@yogurt.jpg" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
+                           <graphic>
+                              <ImageView fx:id="imgYogurt" fitHeight="101.0" fitWidth="88.0" pickOnBounds="true" preserveRatio="true" />
+                           </graphic>
                         </Button>
                      </children>
                      <GridPane.margin>
@@ -112,11 +107,7 @@
                      <children>
                         <Button fx:id="btnHelado" mnemonicParsing="false" onAction="#helado" prefHeight="158.0" prefWidth="173.0" text="Helado" textFill="WHITE">
                            <graphic>
-                              <ImageView fitHeight="100.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@helado.jpg" />
-                                 </image>
-                              </ImageView>
+                              <ImageView fx:id="imgHelado" fitHeight="100.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true" />
                            </graphic>
                            <font>
                               <Font name="System Bold" size="18.0" />
@@ -134,11 +125,7 @@
                               <Font name="System Bold" size="18.0" />
                            </font>
                            <graphic>
-                              <ImageView fitHeight="100.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@heladoVegano1.jpg" />
-                                 </image>
-                              </ImageView>
+                              <ImageView fx:id="imgVegano" fitHeight="100.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true" />
                            </graphic>
                         </Button>
                      </children>
