--- a/src/main/resources/com/pooespol/proyecto2_heladeria/DetalleUbicacion.fxml
+++ b/src/main/resources/com/pooespol/proyecto2_heladeria/DetalleUbicacion.fxml
@@ -2,18 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <Pane fx:id="rootPopUp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="300.0" stylesheets="@DetalleUbicacion.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto2_heladeria.DetalleUbicacionController">
    <children>
-      <ImageView fitHeight="250.0" fitWidth="300.0">
-         <image>
-            <Image url="@heladoRosa.jpg" />
-         </image>
-      </ImageView>
+      <ImageView fx:id="imgviewFondo" fitHeight="250.0" fitWidth="300.0" />
       <Label fx:id="lblMarca" layoutX="14.0" layoutY="26.0" text="Capogiro Gelato">
          <font>
             <Font size="24.0" />
