--- a/src/main/resources/com/pooespol/proyecto2_heladeria/DetalleUbicacion.css
+++ b/src/main/resources/com/pooespol/proyecto2_heladeria/DetalleUbicacion.css
@@ -23,6 +23,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
 }
 
 #lblTiempo{
+    -fx-text-fill: white;
     -fx-font-weight: 900;
     
 }
